# Calculator-v1.0

./: README.md
materials/QCustomPlot-library-master/: How to use.txt
src/: Makefile  archiver.sh  s21_calc_v1_0_header.h  s21_calc_v1_0_main.c  s21_calc_v1_0_test.c  s21_calc_v1_0_test.h
src/dvi/: info.texi
src/s21_calc/: CMakeLists.txt  Info.plist  calculator_mode.cpp  calculator_mode.h  calculator_mode.ui  credit_mode.cpp  credit_mode.h  credit_mode.ui  deposit_mode.cpp  deposit_mode.h  deposit_mode.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcplotic.cpp  qcplotic.h  qcplotic.ui  replenishment.cpp  replenishment.h  replenishment.ui  s21_calc_en_US.ts  withdrawal.cpp  withdrawal.h  withdrawal.ui
